changed Header to sticky, fixed dropdown bug (invisible clicking)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,10 +97,12 @@ div.menu__mobile {
 .menu__mobile__button svg {
 	width: 100%;
 	height: 100%;
+	pointer-events: none;
 }
 
 .menu__mobile__list {
 	z-index: 2;
+	pointer-events: none;
 	background: #fff;
 	position: absolute;
 	opacity: 0;
@@ -111,6 +113,7 @@ div.menu__mobile {
 	transition: all 0.8s ease-in-out;
 }
 .menu__mobile__list.active{
+	pointer-events: all;
 	z-index: 2;
 	height: 140px;
 	opacity: 1;
@@ -207,6 +210,19 @@ section#description {
 
 
 @media screen and (max-width: 580px) {
+
+	header.pageHeader{
+		z-index: 3;
+		position: sticky;
+		top: 0;
+		transition: all 0.5s ease;
+	}
+
+	header.pageHeader.scrolled {
+		background-color: #FFF;
+	}
+
+
 
 	header .menu__mobile nav ul {
 		display: flex;
